--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="2000dp"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -54,6 +54,107 @@
         android:layout_marginLeft="325dp"
         android:clickable="true"
         android:src="@drawable/setting_target_main" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Health Status"
+        android:textStyle="bold"
+        android:textSize="22dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="310dp"
+        android:layout_marginLeft="20dp"/>
+
+    <ImageView
+        android:id="@+id/MainHealth1"
+        android:layout_width="450dp"
+        android:layout_height="230dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="335dp"
+        android:scaleType="fitCenter"
+        android:clickable="true"
+        android:src="@drawable/health1_main" />
+
+    <ImageView
+        android:id="@+id/water_intake_main"
+        android:layout_width="240dp"
+        android:layout_height="510dp"
+        android:layout_marginTop="480dp"
+        android:scaleType="fitCenter"
+        android:clickable="true"
+        android:src="@drawable/water_take_main" />
+
+    <ImageView
+        android:id="@+id/sleep_main"
+        android:layout_width="255dp"
+        android:layout_height="255dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="510dp"
+        android:layout_marginLeft="170dp"
+        android:clickable="true"
+        android:src="@drawable/sleep_main" />
+
+    <ImageView
+        android:id="@+id/calories_main"
+        android:layout_width="255dp"
+        android:layout_height="255dp"
+        android:src="@drawable/calori_main"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="700dp"
+        android:clickable="true"/>
+
+    <ImageView
+        android:id="@+id/exercise_main"
+        android:layout_width="360dp"
+        android:layout_height="300dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="850dp"
+        android:layout_gravity="center_horizontal"
+        android:clickable="true"
+        android:src="@drawable/exercise_main" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Health News"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="22dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="1145dp"/>
+
+    <ImageView
+        android:id="@+id/news1_main_pic"
+        android:layout_width="360dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/new1_main"
+        android:layout_marginTop="1182dp"/>
+
+    <TextView
+        android:id="@+id/news1_main_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Health In The Contemporary World"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="1380dp"/>
+
+    <ImageView
+        android:id="@+id/news2_main_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/news2_main" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        and
+        android:text="TextView" />
 
 
 </FrameLayout>
